--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 PORT=5000
-DB_USERNAME=auth_app
+DB_USERNAME=sonictonic_app
 DB_PASSWORD=VeryCoolPassword
-DB_DATABASE=auth_db
+DB_DATABASE=sonictonic_db
 DB_HOST=localhost
 JWT_SECRET=WIK+8uXkCJzmnA==
 JWT_EXPIRES_IN=604800
